client: fix tooltips (1.0.18)