@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.meteorlite'
-version '1.0.17'
+version '1.0.18'
 
 repositories {
     mavenCentral()
@@ -152,6 +152,7 @@ shadowJar {
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
             "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED",
             "-Dsun.java2d.uiScale=1.0",
             "--illegal-access=permit",
